ADD control version  .../admin/views/singular/tmpl/edit.php         |  solo puse el primer [%%IF INCLUDE_VERSIONS%%]

--- a/admin/language/en-GB/en-GB.com_componentarchitect.ini
+++ b/admin/language/en-GB/en-GB.com_componentarchitect.ini
@@ -152,10 +152,18 @@ COM_COMPONENTARCHITECT_FIELD_VALUE_MODIFIED="Modified Date"
 COM_COMPONENTARCHITECT_FIELD_MODIFIED_BY_LABEL="Modified By"
 
 
+COM_COMPONENTARCHITECT_FIELD_STATUS_LABEL="Status"
+COM_COMPONENTARCHITECT_HEADING_STATUS="Status"
+COM_COMPONENTARCHITECT_SELECT_STATUS="- Select Status -"
+COM_COMPONENTARCHITECT_ARCHIVED_FILTER_LABEL="Only Archived"
 
 
 
 
+COM_COMPONENTARCHITECT_FIELDSET_VERSION_CONTROL_LABEL="Version Control Options"
+COM_COMPONENTARCHITECT_FIELDSET_VERSION_CONTROL_DESC="Set which content require Version Control and the maximum number of past revisions stored."
+COM_COMPONENTARCHITECT_ACTION_VERSION_NOTE="Edit Note"
+COM_COMPONENTARCHITECT_ACTION_VERSION_NOTE_COMPONENT_DESC="Allows users in the group add notes for the Version Control."
 
 COM_COMPONENTARCHITECT_SAVE_ORDER_LABEL="Save Ordering" 
 COM_COMPONENTARCHITECT_LIST_ORDERING_LABEL="Show Ordering"
@@ -163,6 +171,8 @@ COM_COMPONENTARCHITECT_LIST_ORDERING_LABEL="Show Ordering"
 
 
 
+COM_COMPONENTARCHITECT_FIELD_VERSION_LABEL="Revision"
+COM_COMPONENTARCHITECT_SAVE_HISTORY_OPTIONS_DESC="Whether to automatically save old versions of items in the Component Architect Manager component. If set to Yes, old versions of items are saved automatically provided the specific save history is also set for the item type. When editing, you may restore from a previous version of the item."
 
 
 ; Language variables for Categories
@@ -238,6 +248,9 @@ COM_COMPONENTARCHITECT_COMPONENTS_FIELD_DESCRIPTION_MUST_HAVE_DESC="The componen
      
 
          
+COM_COMPONENTARCHITECT_COMPONENTS_FIELD_SAVE_HISTORY_LABEL="Save components/extensions revisions"
+COM_COMPONENTARCHITECT_COMPONENTS_FIELD_SAVE_HISTORY_DESC="Select whether to save a version history for components."
+COM_COMPONENTARCHITECT_COMPONENTS_FIELD_VERSION_DESC="A count of the number of times this components/extensions has been revised."
     
 COM_COMPONENTARCHITECT_COMPONENTS_FIELD_CREATED_BY_DESC="Select the user that is to be shown as creating the component.  If none selected on create then the current logged in user will be used."
 COM_COMPONENTARCHITECT_COMPONENTS_FIELD_CREATED_BY_ALIAS_DESC="Enter an alias for the user that is to be shown as creating the component."
@@ -522,6 +535,9 @@ COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_DESCRIPTION_MUST_HAVE_DESC="The ob
      
 
          
+COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_SAVE_HISTORY_LABEL="Save objects/tables revisions"
+COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_SAVE_HISTORY_DESC="Select whether to save a version history for component objects."
+COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_VERSION_DESC="A count of the number of times this objects/tables has been revised."
     
 COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_CREATED_BY_DESC="Select the user that is to be shown as creating the object. If none selected on create then the current logged in user will be used."
 COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_CREATED_BY_ALIAS_DESC="Enter an alias for the user that is to be shown as creating the object."
@@ -816,6 +832,9 @@ COM_COMPONENTARCHITECT_FIELDSETS_FIELD_DESCRIPTION_MUST_HAVE_DESC="The fieldset 
      
 
          
+COM_COMPONENTARCHITECT_FIELDSETS_FIELD_SAVE_HISTORY_LABEL="Save fieldsets revisions"
+COM_COMPONENTARCHITECT_FIELDSETS_FIELD_SAVE_HISTORY_DESC="Select whether to save a version history for fieldsets."
+COM_COMPONENTARCHITECT_FIELDSETS_FIELD_VERSION_DESC="A count of the number of times this fieldsets has been revised."
     
 COM_COMPONENTARCHITECT_FIELDSETS_FIELD_CREATED_BY_DESC="Select the user that is to be shown as creating the fieldset. If none selected on create then the current logged in user will be used."
 COM_COMPONENTARCHITECT_FIELDSETS_FIELD_CREATED_BY_ALIAS_DESC="Enter an alias for the user that is to be shown as creating the fieldset."
@@ -921,6 +940,9 @@ COM_COMPONENTARCHITECT_FIELDS_FIELD_DESCRIPTION_MUST_HAVE_DESC="The field must h
      
 
          
+COM_COMPONENTARCHITECT_FIELDS_FIELD_SAVE_HISTORY_LABEL="Save fields revisions"
+COM_COMPONENTARCHITECT_FIELDS_FIELD_SAVE_HISTORY_DESC="Select whether to save a version history for fields."
+COM_COMPONENTARCHITECT_FIELDS_FIELD_VERSION_DESC="A count of the number of times this fields has been revised."
     
 COM_COMPONENTARCHITECT_FIELDS_FIELD_CREATED_BY_DESC="Select the user that is to be shown as creating the field. If none selected on create then the current logged in user will be used."
 COM_COMPONENTARCHITECT_FIELDS_FIELD_CREATED_BY_ALIAS_DESC="Enter an alias for the user that is to be shown as creating the field."
@@ -1200,6 +1222,9 @@ COM_COMPONENTARCHITECT_FIELDTYPES_FIELD_DESCRIPTION_MUST_HAVE_DESC="The type mus
      
 
          
+COM_COMPONENTARCHITECT_FIELDTYPES_FIELD_SAVE_HISTORY_LABEL="Save field types revisions"
+COM_COMPONENTARCHITECT_FIELDTYPES_FIELD_SAVE_HISTORY_DESC="Select whether to save a version history for field types."
+COM_COMPONENTARCHITECT_FIELDTYPES_FIELD_VERSION_DESC="A count of the number of times this field types has been revised."
     
 COM_COMPONENTARCHITECT_FIELDTYPES_FIELD_CREATED_BY_DESC="Select the user that is to be shown as creating the type. If none selected on create then the current logged in user will be used."
 COM_COMPONENTARCHITECT_FIELDTYPES_FIELD_CREATED_BY_ALIAS_DESC="Enter an alias for the user that is to be shown as creating the type."
@@ -1460,6 +1485,9 @@ COM_COMPONENTARCHITECT_CODETEMPLATES_FIELD_DESCRIPTION_MUST_HAVE_DESC="The templ
      
 
          
+COM_COMPONENTARCHITECT_CODETEMPLATES_FIELD_SAVE_HISTORY_LABEL="Save code templates revisions"
+COM_COMPONENTARCHITECT_CODETEMPLATES_FIELD_SAVE_HISTORY_DESC="Select whether to save a version history for code templates."
+COM_COMPONENTARCHITECT_CODETEMPLATES_FIELD_VERSION_DESC="A count of the number of times this code templates has been revised."
     
 COM_COMPONENTARCHITECT_CODETEMPLATES_FIELD_CREATED_BY_DESC="Select the user that is to be shown as creating the template. If none selected on create then the current logged in user will be used."
 COM_COMPONENTARCHITECT_CODETEMPLATES_FIELD_CREATED_BY_ALIAS_DESC="Enter an alias for the user that is to be shown as creating the template."
