--- a/admin/language/en-GB/en-GB.com_componentarchitect.ini
+++ b/admin/language/en-GB/en-GB.com_componentarchitect.ini
@@ -1,6 +1,6 @@
-; @version 		$Id: en-GB.com_componentarchitect.ini 608 2016-01-14 18:17:01Z BrianWade $
-; @name			    Component Architect (Release 1.2.0)
-; @author			Component Architect (http://www.componentarchitect.com)
+; @version 		$Id:2017-09-17 20:14:05 caballeroantonio $
+; @name			    Component Architect Manager (Release 1.2.0tx)
+; @author			caballeroantonio (caballeroantonio.com)
 ; @package			com_componentarchitect
 ; @subpackage		com_componentarchitect.admin
 ; @copyright		Copyright (c)2013 - 2016 Simply Open Source Ltd. (trading as Component Architect). All Rights Reserved
