Habilité los formularios para agregar documentación install.architectcomp_mysql.utf8.sql change default value generate.php - change [%%FIELD_DBCOMMENT%%] by $field->name add DATE type with regex - rules/date.php - js/architectcompvalidate.js - field.xml - fieldtype.xml

--- a/admin/language/en-GB/en-GB.com_componentarchitect.ini
+++ b/admin/language/en-GB/en-GB.com_componentarchitect.ini
@@ -1778,6 +1778,7 @@ COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_NUMERIC="Numeric"
 COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_PASSWORD="Password"
 COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_OPTIONS="Options"
 COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_TEL="Telephone"
+COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_DATE="Date"
 COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_TIME="Time"
 COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_TIMESTAMP="Time stamp"
 COM_COMPONENTARCHITECT_FIELD_VALIDATION_TYPE_VALUE_URL="Web Address/URL"
