--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
@@ -27,6 +27,7 @@
 [%%COM_ARCHITECTCOMP%%]="[%%ArchitectComp_name%%]"
 [%%COM_ARCHITECTCOMP%%]_COMPONENT_NAME="[%%com_architectcomp%%]"
 [%%COM_ARCHITECTCOMP%%]_XML_DESCRIPTION="[%%Architectcomp_description_ini%%]"
+[%%COM_ARCHITECTCOMP%%]_DESCRIPTION="[%%Architectcomp_description%%]"
 
 [%%COM_ARCHITECTCOMP%%]_ACTION_DELETEOWN="Delete Own"
 [%%COM_ARCHITECTCOMP%%]_ACTION_DELETEOWN_COMPONENT_DESC="Allows users in the group to delete any content they submitted in this extension."
@@ -744,5 +745,17 @@ JHELP_COMPONENTS_[%%ARCHITECTCOMP%%]_CATEGORY_EDIT="Components_Content_Categorie
 
 [%%ENDFOR COMPONENT_OBJECT%%]
 
-; if generate_admin_dashboard
+[%%IF GENERATE_ADMIN_DASHBOARD%%]
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD="Dashboard"
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_COPYRIGHT="[%%COMPONENTCOPYRIGHT%%]"
+;tal vez me conviene usar [ % % Architectcomp_description_ini % % ]
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_DESCRIPTION="[%%Architectcomp_description%%]"
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_UPDATE_HEADER="Updates"
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_USE_JOOMLA_UPDATES="<p>We use the Joomla! Extension Update to notify you of available updates for [%%ArchitectComp_name%%].  Please visit your Joomla! Control Panel and check the extension updates regularly to see if a new update is available for [%%ArchitectComp_name%%].</p><p>If you prefer you can check on our website www.componentarchitect.com to see if there is an update and download it from there.  You can then use the Joomla Extension Manager/Install process to install this download."
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_CURRENT_RELEASE="Your current release: [%%ArchitectComp_name%%] (Release [%%COMPONENTSTARTVERSION%%])"
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_COPYRIGHT_HEADER="Copyright and Licence"
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_LICENSE="[%%ArchitectComp_name%%] is Open Source Software and is distributed under the terms of the <a href="_QQ_"http://www.gnu.org/licenses/gpl-3.0.html"_QQ_">GNU General Public License</a>, version 3 or - at your option - any later version."
+[%%COM_ARCHITECTCOMP%%]_DASHBOARD_RELEASE="[%%ArchitectComp_name%%] [%%COMPONENTSTARTVERSION%%]"
 [%%COM_ARCHITECTCOMP%%]_VIEW_DASHBOARD_HEADER="[%%ArchitectComp_name%%] Manager: Dashboard"
+[%%COM_ARCHITECTCOMP%%]_JOOMLA_LOGO_DISCLAIMER="This product '[%%ArchitectComp_name%%]' is not affiliated with nor endorsed by the Joomla!&#153; Project. It is not supported or warranted by the Joomla!&#153; Project or Open Source Matters. Any Joomla!&#153; logo is used under a limited license granted by Open Source Matters the trademark holder in the United States and other countries."
+[%%ENDIF GENERATE_ADMIN_DASHBOARD%%]
