--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/compobject_user.tex
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/compobject_user.tex
@@ -1,5 +1,5 @@
 
 %each field
 [%%FOREACH OBJECT_FIELD%%]
-	[%%FIELD_NAME_LYX%%] & [%%FIELD_DBCOMMENT_LYX%%] \tabularnewline\hline 
+	[%%FIELD_NAME_LATEX%%] & [%%FIELD_DBCOMMENT_LATEX%%] \tabularnewline\hline 
 [%%ENDFOR OBJECT_FIELD%%]
