--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/es-ES/es-ES.com_architectcomp.ini
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/es-ES/es-ES.com_architectcomp.ini
@@ -240,7 +240,7 @@
 
 [%%IF INCLUDE_VERSIONS%%]
 [%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_LABEL="Opciones del control de versiones"
-[%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_DESC="Set which content require Version Control and the maximum number of past revisions stored."
+[%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_DESC="Establezca qu\u00e9 contenido requiere Control de Versiones y el n\u00famero m\u00e1ximo de revisiones anteriores que pueden ser almacenadas."
 [%%COM_ARCHITECTCOMP%%]_ACTION_VERSION_NOTE="Edit Note"
 [%%COM_ARCHITECTCOMP%%]_ACTION_VERSION_NOTE_COMPONENT_DESC="Allows users in the group add notes for the Version Control."
 [%%ENDIF INCLUDE_VERSIONS%%]
@@ -287,7 +287,7 @@
 
 [%%IF INCLUDE_VERSIONS%%]
 [%%COM_ARCHITECTCOMP%%]_FIELD_VERSION_LABEL="Revision"
-[%%COM_ARCHITECTCOMP%%]_SAVE_HISTORY_OPTIONS_DESC="Whether to automatically save old versions of items in the [%%ArchitectComp_name%%] component. If set to Yes, old versions of items are saved automatically provided the specific save history is also set for the item type. When editing, you may restore from a previous version of the item."
+[%%COM_ARCHITECTCOMP%%]_SAVE_HISTORY_OPTIONS_DESC="Si desea guardar autom\u00e1ticamente versiones antiguas de elementos en el componente [%%ArchitectComp_name%%]. Si se establece en S\u00ed, las versiones antiguas de elementos se guardan autom\u00e1ticamente siempre que el historial de guardado espec\u00edfico tambi\u00e9n se establezca para el tipo de elemento. Al editar, puede restaurar desde una versi\u00f3n anterior del elemento."
 [%%ENDIF INCLUDE_VERSIONS%%]
 
 [%%IF GENERATE_PLUGINS_VOTE%%]
@@ -560,7 +560,7 @@ JHELP_COMPONENTS_[%%ARCHITECTCOMP%%]_CATEGORY_EDIT="Components_Content_Categorie
     [%%ENDIF INCLUDE_URLS%%]  
     [%%IF INCLUDE_VERSIONS%%]
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELD_SAVE_HISTORY_LABEL="Guardar revisiones de [%%compobject_name%%]"
-[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELD_SAVE_HISTORY_DESC="Select whether to save a version history for [%%compobject_plural_name%%]."
+[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELD_SAVE_HISTORY_DESC="Seleccione si desea guardar un historial de versiones para [%%compobject_plural_name%%]."
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELD_VERSION_DESC="A count of the number of times this [%%compobject_name%%] has been revised."
     [%%ENDIF INCLUDE_VERSIONS%%]
     
