--- a/admin/language/en-GB/en-GB.com_componentarchitect.ini
+++ b/admin/language/en-GB/en-GB.com_componentarchitect.ini
@@ -1656,6 +1656,14 @@ COM_COMPONENTARCHITECT_COMPONENTS_FIELD_NAME_DESC="<p>Enter a name for the compo
 
 COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_CODE_NAME_ERROR_DUPLICATE="Invalid field: Code Name must be unique within a Component/Extension.  Duplicate found."
 COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_GENERATE_ADMIN_VIEWS_ERROR_ADMIN_NOT_SET="Invalid field: Generate Admin - Views cannot be set to 'Generate' if Generate Admin is set to 'Do not generate'"
+
+COM_COMPONENTARCHITECT_COMPONENTS_FIELD_GENERATE_ADMIN_DASHBOARD_LABEL="Generate Dashboard"
+COM_COMPONENTARCHITECT_COMPONENTS_FIELD_GENERATE_ADMIN_DASHBOARD_DESC="Select whether to generate dashboard"
+COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_GENERATE_ADMIN_DASHBOARD_LABEL="Generate Dashboard"
+COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_GENERATE_ADMIN_DASHBOARD_DESC="Select whether to generate dashboard"
+
+
+
 COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_GENERATE_CATEGORIES_SITE_VIEW_CATEGORIES_ERROR_CATEGORIES_SITE_NOT_SET="Invalid field: Generate Categories - Site View Categories cannot be set to 'Generate' if Generate Categories or Generate Site is set to 'Do not generate'"
 COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_GENERATE_CATEGORIES_SITE_VIEW_CATEGORY_ERROR_CATEGORIES_SITE_NOT_SET="Invalid field: Generate Categories - Site View Category cannot be set to 'Generate' if Generate Categories or Generate Site is set to 'Do not generate'"
 COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_GENERATE_PLUGINS_EVENTS_ERROR_PLUGINS_NOT_SET="Invalid field: Generate Plugins - Events cannot be set to 'Generate' if Generate Plugins is set to 'Do Not Generate'"
