site implementado edit.php botón version sólo en edición, no en nuevo architectcomp_install.php @bug resuelto content_history_options 'formFile' site/controller.php acceso exclusivo a usuarios registrados site/controllers/compobjectplural.php export site/models/compobjectform.php @bug resuelto getItem site/controllers/compobjectplural.php add function getListQuery4Export site/models/rules/date.php add validation site add dashboard @ToDo implement core.version.tasks @ToDo generate.php sintetizar content_history_options para quitarlo del script install

--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/com_architectcomp_admin.lyx
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/com_architectcomp_admin.lyx
@@ -756,7 +756,7 @@ SELECT
 
 \begin_layout Plain Layout
 
-t.type_title, h.version_note #l.*,
+t.type_title, t.content_history_options, h.version_note #, l.*
 \end_layout
 
 \begin_layout Plain Layout
